--- a/incl/main/linear_algebra/matricer_vektorer/matricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/matricer.tex
@@ -8,11 +8,11 @@ I forbindelse med løsning af lineære ligningssystemer og optimeringsproblemer 
 En matrix er en rektangulær tabel, hvis elementer er \textbf{skalarer}, der er $k \in \R$. 
 En matrix med $m$ rækker og $n$ søjler har størrelsen $m \times n$.
 Hvis $m=n$, er matricen kvadratisk. 
-Elementet $a_{i,j}$ i $i$'te række og $j$'te søjle kaldes $(i,j)$'te-indgangen i matricen. 
+Elementet $a_{i,j}$ i $i$'te række og $j$'te søjle kaldes den $(i,j)$'te-indgang i matricen. 
 \end{defn}
 \noindent
 %
-På figur \ref{fig:matrix_gen_eks} ses et generelt eksempel på en matrix $A = m \times n$.
+På figur \ref{fig:matrix_gen_eks} ses et generelt eksempel på en $m \times n$ matrix $A$.
 %
 \begin{figure}[H]
 	\begin{center}
@@ -26,7 +26,7 @@ a_{i,1} & a_{i,2} & \ldots & a_{i,j} \\
 \end{bmatrix}
 $$
 	\end{center}
-	\caption{En generel matrix $A=m \times n$.}
+	\caption{En generel $m \times n$ matrix $A$.}
 	\label{fig:matrix_gen_eks}
 \end{figure}
 \noindent
@@ -40,7 +40,7 @@ $$
 \textbf{a}_j= 
 \begin{bmatrix}
 a_{1,j} \\
-a_{2,} \\
+a_{2,j} \\
 \vdots \\
 a_{i,j} \\
 \end{bmatrix}.
