--- a/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
@@ -106,14 +106,16 @@ Da matricen $B$ inddeles i sine søjlevektorer, er grundprincippet i matrixmulti
 En række egenskaber gælder for matrixmultiplikation, som summeret i særning \ref{thm:mxmulti}.
 
 \begin{thm}{}{}\label{thm:mxmulti}
-Lad $A$ og $B$ være $k \times m$ matricer, $C$ være en $m \times n$ matrix, og $P$ og $Q$ være $n \times p$ matricer. Følgende udsagn er dermed sande:\\\\
-(a) $s(AC)=(sA)C=A(sC)$ for en vilkårlig skalar $s$.\\
-(b) $A(CP)=(AC)P$.\\
-(c) $(A+B)C=AC+BC$.\\
-(d) $C(P+Q)=CP+CQ$.\\
-(e) $I_kA=A=AI_m$.\\
-(f) Produktet af en nulmatrice og an vilkårlig matrice er altid $0$.\\
-(g) $(AC)^T=C^TA^T$.
+Lad $A$ og $B$ være $k \times m$ matricer, $C$ være en $m \times n$ matrix, og $P$ og $Q$ være $n \times p$ matricer. Følgende udsagn er dermed sande:
+\begin{enumerate}[label=(\alph*)]
+\item $s(AC)=(sA)C=A(sC)$ for en vilkårlig skalar $s$.
+\item $A(CP)=(AC)P$.
+\item $(A+B)C=AC+BC$.
+\item $C(P+Q)=CP+CQ$.
+\item $I_kA=A=AI_m$.
+\item Produktet af en nulmatrice og an vilkårlig matrice er altid $0$.
+\item $(AC)^T=C^TA^T$.
+\end{enumerate}
 \end{thm}
 \begin{proof}
 asdf
