--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
@@ -1,26 +1,26 @@
-\subsection{Gauss elimination}
+\subsection{Gauss-elimination}
 \label{gauss}
 % 1.4
 % Sætning 1.4 kan vi bevise den
-En algoritme til løsningen af linære ligningssystemer er  \textbf{rækkereduktionsalgoritmen}, som omdanner en matrix fra en totalmatrice til reduceret trappeform.
-Når den bruges til at løse linære ligningssystemer, kaldes denne process for \textbf{Gauss elimination}.
-I algoritmen bruges de elementære rækkeoperationer for at omdanne en matrix $A$ til trappeform. 
-Herefter benyttes rækkeoperationerne igen til at reducere matricen til trappeform og videre til reduceret trappeform.
+En algoritme til løsninge af lineære ligningssystemer er  \textbf{rækkereduktionsalgoritmen}, som reducerer en totalmatrix til reduceret trappeform.
+Når den bruges til at løse lineære ligningssystemer, kaldes denne process for \textbf{Gauss-elimination}.
+I algoritmen bruges de elementære rækkeoperationer til at omdanne en matrix $A$ til trappeform. 
+Herefter benyttes rækkeoperationerne til at reducere matricen til reduceret trappeform.
 Algoritmen gennemgår således følgende skridt:
 %
 \begin{enumerate}
-\item Find første ikke-nul søjle i $A$ fra venstre.
-\item Ved rækkeombytning placeres en ikke-nul indgang øverst i pivot-søjlen.
-\item Skab nuller under pivot-indgangen ved hjælp af rækkeudskiftning.
+\item Find første ikke-nulsøjle i $A$ fra venstre.
+\item Ved rækkeombytning placeres en ikke-nulindgang øverst i pivot-søjlen.
+\item Skab nuller under pivotindgangen ved hjælp af rækkeudskiftning.
 \item Øverste række markeres som afsluttet og trin $1-3$ gennemføres nu på den næste række.
-\item Alle rækker med pivot-indgange skaleres så alle pivot-indgange er lig $1$.
-\item Ved rækkeudskiftning sikres nu $0$'er over og under pivot-indgangene.
+\item Alle rækker med pivotindgange skaleres, så alle pivotindgange er lig $1$.
+\item Ved rækkeudskiftning sikres nu $0$'er over og under pivotindgangene.
 \end{enumerate}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Eksempel
 \begin{eks}
-Givet ligningssystemet:
+Lad
 %
 \begin{align*}
 \begin{array}{rlr}
@@ -30,7 +30,7 @@ x_1-x_3-2x_4-8x_5    &=  &-3 \\
 \end{array}
 \end{align*}
 %
-Ligningssystemet opskrevet som totalmatrix $[A \text{   }|\text{ }\mathbf{b}]$.
+Ligningssystemet opskrevet som totalmatrix $[A \text{   }|\text{ }\mathbf{b}]$ er
 %
 \begin{equation*}
 A=
@@ -44,7 +44,7 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \end{blockarray}
 \end{equation*}
 %
-De elementære rækkeopperationer benyttes nu med henblik på at reducere totalmatricen til trappeform.
+De elementære rækkeoperationer benyttes nu med henblik på at reducere totalmatricen til trappeform.
 %
 \begin{equation*}
 \xrightarrow[R_3 \rightarrow R_3-3R_1]{R_2 \rightarrow R_2+2R_1} 
@@ -70,7 +70,7 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \end{blockarray}
 \end{equation*}
 %
-Algoritmen fortsættes nu med henblik på at opnå reduceret trappeform.
+Algoritmen omdanner totalmatricen til reduceret trappeform.
 %
 \begin{equation*}
 \xrightarrow[R_2 \rightarrow R_2+2R_3]{R_1 \rightarrow R_1+2R_3}
@@ -108,7 +108,7 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \end{blockarray}
 \end{equation*}
 %
-Herefter kan løsninger opskrives:
+Herefter kan følgende løsninger opskrives:
 %
 \begin{align*}
 \begin{array}{rrcll}
@@ -118,7 +118,7 @@ x_4+2x_5    =&-1   &\iff &x_4   =&-2x_5-1
 \end{array}
 \end{align*}
 %
-Parameterfremstillingen for løsningen i $\R^5$ bliver således:
+Parameterfremstillingen for løsningen i $\R^5$ er dermed
 %
   \begin{align*}
     \mathbf{x} &= \begin{bmatrix}
@@ -165,15 +165,15 @@ Parameterfremstillingen for løsningen i $\R^5$ bliver således:
 %
 \subsection{Rang og nullitet}
 % 
-For at beskrive en matrix egenskaber i forhold til pivot-indgange er der brug for at definere nogle begreber. 
+For at beskrive en matrices egenskaber i forhold til pivotindgange er der brug for at definere nogle begreber. 
 %
-\begin{defn}{}{}
-\textbf{Rangen} af en matrix $A$ er antallet af pivotindgange, noteret $\text{rang}(A)$. \\
-\textbf{Nulliteten} af $A$ er antallet af søjler uden pivotindgange, noteret $\text{null}(A)$.
+\begin{defn}{}{rangnull}
+\textbf{Rangen} af en matrix $A$ er antallet af pivotindgange, hvilket noteres $\text{rang}(A)$. \\
+\textbf{Nulliteten} af $A$ er antallet af søjler uden pivotindgange, hvilket noteres $\text{null}(A)$.
 \end{defn}
 %
 \noindent
-I en $m \times n$-matrix er $\text{rang}(A)+\text{null}(A)=n$
+I en $m \times n$ matrix er $\text{rang}(A)+\text{null}(A)=n$. 
 %
 Med udgangspunkt i eksempel \ref{eks_gauss} bliver rang og nullitet i 
 %
@@ -198,14 +198,14 @@ Følgende udsagn er ækvivalente:
 \begin{enumerate}[label=(\alph*)]
 \item Matricen $A\mathbf{x}=\mathbf{b}$ er \textbf{konsistent}.
 \item Vektoren $\mathbf{b}$ er en linearkombination af søjlerne i $A$.
-\item Den reducerede trappeform af totalmatrixen $[A|\mathbf{b}]$ har ingen rækker af formen $[ 0 \ldots 0 | d  ]$, hvor $d \neq 0$.
+\item Den reducerede trappeform af totalmatricen $[A|\mathbf{b}]$ har ingen rækker på formen $[ 0 \ldots 0 | d  ]$, hvor $d \neq 0$.
 \end{enumerate}
 %
 \end{thm}
 %
 \begin{proof}
 %
-Lad $A$ være en $n \times m$ matrix og lad $\mathbf{b}$ være i $\R^m$ ud fra definition \ref{defn:mvp} følger det, at der eksisterer en vektor 
+Lad $A$ være en $n \times m$ matrix og $\mathbf{b} \in \R^m$. Jævnfør definition \ref{defn:mvp} følger det, at der eksisterer en vektor 
 %
 \begin{align*}
        \mathbf{v} = \begin{bmatrix}
@@ -216,17 +216,17 @@ Lad $A$ være en $n \times m$ matrix og lad $\mathbf{b}$ være i $\R^m$ ud fra d
         \end{bmatrix},  
 \end{align*}
 %
-i $\R^n$, der opfylder, at $A\mathbf{v}=\mathbf{b}$, hvis og kun hvis $$v_1 \mathbf{a}_1+v_2 \mathbf{a}_2 + \ldots + v_n \mathbf{a}_n$$ hvilket er linearkombinationen af matricen og vektoren. 
-Det følger derfor at udsagn $(a)$ og udsagn $(b)$ er ækvivalente.
-Herefter bevises, at $(a)$ og $(c)$ er ækvivalente. 
-Hvis udsagn $(c)$ er falsk følger det, at  $$0 x_1+0 x_2 + \ldots + 0x_n =d,$$ hvor $d\neq0$, da dette ikke har nogen løsning følger det, at ligningssystemet således bliver inkonsistent. 
-Såfremt $(c)$ er sandt gælder omvendt, at alle rækker i den reducerede trappeform indeholder en løsning, som også er løsning til $A\mathbf{x}=\mathbf{b}$. 
-Således er $(a)$ og $(c)$ ækvivalente.
+i $\R^n$, der opfylder, at $A\mathbf{v}=\mathbf{b}$, hvis og kun, hvis $$v_1 \mathbf{a}_1+v_2 \mathbf{a}_2 + \ldots + v_n \mathbf{a}_n \text{, }$$ hvilket er linearkombinationen af matricen og vektoren. 
+Det følger derfor, at (a) og (b) er ækvivalente.
+Herefter bevises, at (a) og (c) er ækvivalente. \\
+Hvis (c) er falsk, følger det, at  $$0 x_1+0 x_2 + \ldots + 0x_n =d,$$ hvor $d\neq0$. Da dette ikke har nogen løsning, følger det, at ligningssystemet således bliver inkonsistent. 
+Såfremt (c) er sandt, gælder der omvendt, at alle rækker i den reducerede trappeform indeholder en løsning, som også er løsning til $A\mathbf{x}=\mathbf{b}$. 
+Således er (a) og (c) ækvivalente.
 %
 \end{proof}
 \\
 %
-Med udgangspunkt i eksempel \ref{eks_gauss}, ses derfor, at den er konsistent, da $d$ ikke er en pivot-indgang, såfremt ligningssystemet skulle være inkonsistent kunne den have følgende form: 
+Med udgangspunkt i eksempel \ref{eks_gauss} ses derfor, at den er konsistent, da $d$ ikke er en pivotindgang. Såfremt ligningssystemet skulle være inkonsistent, kunne den have formen
 %
 \begin{align*}
 A=\begin{blockarray}{ccccccc}
@@ -236,9 +236,9 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
   0 & 0 & 1 & 0 & 3 & 3 \\
   0 & 0 & 0 & 0 & 0 & -1 \\
 \end{block}
-\end{blockarray} 
+\end{blockarray},
 \end{align*}
 %
-Hvor $d \neq 0$ er i indgang $a_{3,6}$. 
-Det følger derfor også, at man ikke kan opnå dette $b$, da det ikke kan laves som linear kombination af søjlerne. 
+hvor $d \neq 0$ er i indgang $a_{3,6}$. 
+Det følger derfor også, at man ikke kan opnå dette $b$, da det ikke kan laves som linearkombination af søjlerne. 
 %
