--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -1,6 +1,6 @@
 \subsection{Lineær uafhængighed}
 % 1.7
-\textcolor{red}{Intro - kort tekst xD}
+Et sæt af vektorer er \textbf{lineært afhængig}, hvis en af vektorerne kan skrives som en linearkombination af de andre vektorer. Hvis ingen af vektorerne kan skrives som en linearkombination af de andre vektorer, så er sættet \textbf{lineært uafhængige}. Det kan derfor siges, at hvis mindst en af vektorerne \textit{afhænger} af de andre vektorer, er samlingen \textit{lineært afhængig}, og dette leder frem til følgende definition. 
 % 
 \begin{defn}{Lineær afhængighed og lineær uafhængighed}{}
 Et sæt af vektorerne $\mathbf{v}_1, \ldots , \mathbf{v}_k$ i $\R^n$ kaldes \textbf{lineært uafhængige}, hvis der eksisterer skalarer $x_1,x_2, \ldots , x_l$, sådan at ligningen 
