--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -14,7 +14,20 @@ Ellers kaldes vektorerne \textbf{lineært afhængige}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Eksempel
 \begin{eks}
-\textcolor{red}{En godt eksemepel på noget der er lineært uafhængig og lineært afhængig XD}
+\begin{align*}
+
+\v_1,v_2 &= \left\{
+\begin{bmatrix}
+           2 \\
+           1 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+           3 \\
+           2 \\
+\end{bmatrix}
+\right\}
+\end{align*}
 \end{eks}
 % 
 \textcolor{red}{Motiverende tekst til næste sætning}
