--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -30,7 +30,7 @@ Følgende udsagn er ækvivalente:
 \item $\text{null}(A)=0$.
 \item $\text{rang}(A)=n$.
 \item Søjlerne i $A$ på reduceret trappeform er standardvektoren i $\R^m$.
-\item $A\mathbf{x}=\mathbf{0}$ har kun løsningen $\mathbf{x}=\mathbf{0}$.
+\item $A\mathbf{x}=\mathbf{0}$ har kun løsningen $\mathbf{x}=\mathbf{0}$.                                                                                                                                                                                                                                                                                                                         
 \item Der er pivot-indgange i hver søjle i $A$. 
 \end{enumerate}
 %
@@ -44,6 +44,7 @@ Følgende udsagn er ækvivalente:
 (f) $\rightarrow$ (g)
 (b) $\rightarrow$ (c)
 (c) $\rightarrow$ (d)
+(d) $\rightarrow$ (e)
 (e) $\rightarrow$ (f)
 (f) $\rightarrow$ (b)
 %
